chart alignment issues

--- a/css/chart.css
+++ b/css/chart.css
@@ -19,6 +19,7 @@
 
 #myChart{
     padding-left: 5px;
+    padding-top: 10px;
 }
 
 #home{
